--- a/02-Udemy/-02-Js-Maximilian/Projects/index.html
+++ b/02-Udemy/-02-Js-Maximilian/Projects/index.html
@@ -12,6 +12,7 @@
             <li><a href="02-Favorite-Movies/index.html">Favorite-Movies</a></li>
             <li><a href="03-Mini-Shop/index.html">Mini-Shop</a></li>
             <li><a href="04-Project-Planner/index.html">Project-Planner</a></li>
+            <li><a href="05-Posts/index.html">Posts</a></li>
         </ul>
     </div>
 </body>
